test/files/neg/t2779.check
t2779.scala:16: error: method f is defined twice
  conflicting symbols both originated in file 't2779.scala'
    override def f = List(M1)
                 ^
one error found
